custom/tests/gpu-operator-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: cuda-vectoradd
spec:
  restartPolicy: OnFailure
  containers:
  - name: cuda-vectoradd
    image: "nvcr.io/nvidia/k8s/cuda-sample:vectoradd-cuda11.7.1-ubuntu20.04"
    command: ["sleep","3600"]
    resources:
      limits:
        nvidia.com/gpu: 8
