custom/tests/ubuntu-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-cp
spec:
  nodeSelector:
    kubernetes.io/hostname: cp1
  containers:
  - name: ubuntu
    image: ubuntu
    command: ["/bin/bash", "-c", "sleep 3600"]
  restartPolicy: Never
  tolerations:
    - key: "node-role.kubernetes.io/control-plane"
      operator: "Exists"
      effect: "NoSchedule"
---
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-worker
spec:
  nodeSelector:
    kubernetes.io/hostname: worker1
  containers:
  - name: ubuntu
    image: ubuntu
    command: ["/bin/bash", "-c", "sleep 3600"]
  restartPolicy: Never
